[package]
name = "bitcoin_testnet_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.30.0"
bitcoincore-rpc = "0.17.0"
serde_json = "1.0.99"
rand = "0.8.4"
tokio = { version = "1", features = ["full"] }
hex = "0.4.3"